--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Webpack Setup</title>
+    <style type="text/css">
+      body {
+        font-family: sans-serif;
+      }
+
+      h1, h2 {
+        font-weight: normal;
+      }
+    </style>
 </head>
 <body>
     <div id="root"></div>
