--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Webpack Setup</title>
+    <title>dogs !</title>
     <style type="text/css">
       body {
         font-family: sans-serif;
@@ -12,6 +12,17 @@
 
       h1, h2 {
         font-weight: normal;
+      }
+      button {
+        background-color: #0385FF;
+        color: white;
+        border: none;
+        padding: 9px;
+        border-radius: 5px 5px;
+      }
+      p{
+        padding-bottom: 0;
+        padding-top: 10px;
       }
     </style>
 </head>
