remove css to match example from prof

--- a/src/index.html
+++ b/src/index.html
@@ -9,20 +9,13 @@
       body {
         font-family: sans-serif;
       }
-
-      h1, h2 {
-        font-weight: normal;
-      }
-      button {
-        background-color: #0385FF;
-        color: white;
-        border: none;
-        padding: 9px;
-        border-radius: 5px 5px;
-      }
       p{
         padding-bottom: 0;
         padding-top: 10px;
+      }
+      img{
+        max-width: 100%;
+        max-height: 100%;
       }
     </style>
 </head>
